データ構造を変更
